fixed duplicate modules failure because of title truncation
git-svn-id: https://source.sakaiproject.org/contrib/foothill/melete/trunk@46348 fdecad78-55fc-0310-b1b2-d7d25cf747c9

--- a/melete-app/src/webapp/rtbc004.css
+++ b/melete-app/src/webapp/rtbc004.css
@@ -432,7 +432,7 @@ border: 0;}
   {
   hspace:5;
  padding:10px;
-  width:auto;
+  width:40%;
   align:center;
  vertical-align: top;
  }
